# opencode-ios-simulator

./: .gitignore  COMPLETE_README.md  LICENSE  README.md  README_zh.md  pyproject.toml
ios_simulator_skill/: __init__.py
opencode_ios_simulator/: __init__.py  cli.py
